[package]
name = "mqtt-notify-rs"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
notify-rust = "4.11"
rand = "0.9"
rpassword = "7.3"
rumqttc = "0.24"
rustls = "0.23.23"
shellexpand = "3.1"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
tokio-xmpp = "4.0.0"
url = "2"
xmpp = "0.6"
xmpp-parsers = "0.21.0"
