[package]
name = "mqtt-notify-rs"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
notify-rust = "4"
rand = "0.9"
rpassword = "7"
rumqttc = "0.24"
rustls = "0.23"
shellexpand = "3"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio = "1"
tokio-xmpp = "4"
url = "2"
xmpp = "0.6"
xmpp-parsers = "0.21"
