[package]
name = "mqtt-notify-rs"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
notify-rust = "4"
rand = "0.9"
rpassword = "7"
rumqttc = "0.24"
rustls = "0.23"
shellexpand = "3"
tokio = "1"
tokio-graceful-shutdown = "0.19"
tokio-xmpp = "4"
url = "2"
xmpp = "0.6"
xmpp-parsers = "0.21"

[lints.clippy]
branches_sharing_code = "warn"
cloned_instead_of_copied = "warn"
elidable_lifetime_names = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
ignored_unit_patterns = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
needless_pass_by_value = "warn"
needless_raw_string_hashes = "warn"
non_std_lazy_statics = "warn"
or_fun_call = "warn"
redundant_clone = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
type_repetition_in_bounds = "warn"
uninlined_format_args = "warn"
unnecessary_semicolon = "warn"
use_self = "warn"
